# Tushare-Docs-MCP

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml
src/tushare_docs_mcp/: main.py  tools.py
src/tushare_docs_mcp/docs/: tushare_basic.md
src/tushare_docs_mcp/docs/non-official/: 17_社区捐助.md
src/tushare_docs_mcp/docs/non-official/01_股票数据/01_基础数据/: 01_股票列表.md  02_每日股本（盘前）.md
src/tushare_docs_mcp/docs/non-official/01_股票数据/02_行情数据/: 01_历史日线.md  03_历史分钟.md  04_实时分钟.md  05_周线行情.md  08_周_月线行情_每日更新.md  09_周_月线复权行情_每日更新.md  14_每日指标.md
src/tushare_docs_mcp/docs/non-official/01_股票数据/03_财务数据/: 01_利润表.md  02_资产负债表.md  03_现金流量表.md
src/tushare_docs_mcp/docs/non-official/01_股票数据/04_参考数据/: 04_股权质押明细数据.md
src/tushare_docs_mcp/docs/non-official/01_股票数据/05_特色数据/: 02_每日筹码及胜率.md  03_每日筹码分布.md
src/tushare_docs_mcp/docs/non-official/01_股票数据/07_资金流向数据/: 08_沪深港通资金流向.md
src/tushare_docs_mcp/docs/non-official/04_公募基金/: 07_基金持仓.md
src/tushare_docs_mcp/docs/non-official/05_期货数据/: 05_历史分钟行情.md
src/tushare_docs_mcp/docs/non-official/07_期权数据/: 01_期权合约信息.md
